Fix conflict, prepare to squash commits.
Fix conflicts, Preserve W/H changes in Viewer.jsx as comments.

Adjust notes, preparing to Squash again.

--- a/public/pdfjs-2.0.943-dist/web/viewer.css
+++ b/public/pdfjs-2.0.943-dist/web/viewer.css
@@ -562,6 +562,7 @@ html[dir='rtl'] #sidebarContainer {
 }
 
 #outerContainer.sidebarResizing #sidebarContainer {
+  overflow: hidden;
   /* Improve responsiveness and avoid visual glitches when the sidebar is resized. */
   transition-duration: 0s;
   /* Prevent e.g. the thumbnails being selected when the sidebar is resized. */
